--- a/calcular_media.html
+++ b/calcular_media.html
@@ -51,28 +51,27 @@
         </div>
   </div>
 
-  <div class="w-100 h-75 d-flex align-items-center justify-content-center d-none">
+  <div class="w-100 h-75 d-flex align-items-center justify-content-center">
     <div class="border border-secondaryk w-25 h-75 rounded bg-light bg-gradient shadow p-3 mb-5 bg-body">
       <div class="w-100 h-25 d-flex align-items-center justify-content-center">
           <h1 class="fs-3 font-monospace">Cálculo da média</h1>
       </div>
       <div class="w-100 h-75 d-flex align-items-center justify-content-center">
           <div class="w-100 h-75 text-center">
-        <form onsubmit="calcularMedia2()" method="get">
             <div class="input-group">
                 <span class="input-group-text">Digite os valores:</span>
                 <input id="valor_1" type="text" class="form-control">
                 <input id="valor_2" type="text" class="form-control">
-              </div>
-              <button type="submit" class="mt-4 btn btn-dark">Calcular</button>
-            </form>
+            </div>
+              <button onclick="calcularMedia2()" type="submit" class="mt-4 btn btn-dark">Calcular</button>
+            <p id="media"></p>
           </div>
       </div>
     </div>
 </div>
 
 
-<div class="w-100 h-75 d-flex align-items-center justify-content-center">
+<div class="w-100 h-75 d-flex align-items-center justify-content-center d-none">
     <div class="border border-secondaryk w-25 h-75 rounded bg-light bg-gradient shadow p-3 mb-5 bg-body">
       <div class="w-100 h-25 d-flex align-items-center justify-content-center">
           <h1 class="fs-3 font-monospace">Cálculo da média</h1>
@@ -94,5 +93,6 @@
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="js/calcular_media.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
