--- a/calcular_media.html
+++ b/calcular_media.html
@@ -6,7 +6,7 @@
     <title>Calculauto: Médias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
-  <body class="vh-100 vw-100">
+  <body onLoad="mostrarCaixas()" class="vh-100 vw-100">
     <nav class="navbar navbar-expand-lg bg-light bg-gradient shadow p-3 mb-5 bg-body">
         <div class="container-fluid">
           <a class="navbar-brand fs-4" href="#">Calculauto</a>
@@ -32,7 +32,7 @@
       </nav>
 
       
-      <div class="w-100 h-75 d-flex align-items-center justify-content-center d-none">
+      <div id="select" class="w-100 h-75 d-flex align-items-center justify-content-center">
         <div class="border border-secondaryk w-25 h-75 rounded bg-light bg-gradient shadow p-3 mb-5 bg-body">
           <div class="w-100 h-25 d-flex align-items-center justify-content-center">
               <h1 class="fs-3 font-monospace">Escolha a operação</h1>
@@ -51,7 +51,7 @@
         </div>
   </div>
 
-  <div class="w-100 h-75 d-flex align-items-center justify-content-center">
+  <div id="dois_v" class="w-100 h-75 d-flex align-items-center justify-content-center">
     <div class="border border-secondaryk w-25 h-75 rounded bg-light bg-gradient shadow p-3 mb-5 bg-body">
       <div class="w-100 h-25 d-flex align-items-center justify-content-center">
           <h1 class="fs-3 font-monospace">Cálculo da média</h1>
@@ -71,7 +71,7 @@
 </div>
 
 
-<div class="w-100 h-75 d-flex align-items-center justify-content-center d-none">
+<div id="tres_v" class="w-100 h-75 d-flex align-items-center justify-content-center">
     <div class="border border-secondaryk w-25 h-75 rounded bg-light bg-gradient shadow p-3 mb-5 bg-body">
       <div class="w-100 h-25 d-flex align-items-center justify-content-center">
           <h1 class="fs-3 font-monospace">Cálculo da média</h1>
